<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeather"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nsv"
        >

        <ImageView
            android:id="@+id/ivIconTemp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:layout_margin="20dp"
            android:layout_gravity="center|right"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="22sp"
            android:layout_margin="20dp"
            android:layout_gravity="top|left"/>

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_margin="20dp"
            android:text="@string/temperature"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:id="@+id/nsv"
        app:layout_constraintTop_toBottomOf="@+id/cvWeather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lyMainContent"
            app:layout_constraintTop_toBottomOf="@+id/cvWeather"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">
            <!-- Parte superior -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lyTop"
                android:orientation="vertical">
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPartSup"
                    android:text="@string/part_top"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/rvTop"
                    android:textSize="25sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTop"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvPartSup"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="horizontal"
                    android:layoutDirection="ltr"
                    tools:listitem="@layout/part_of_clothes_template"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            </LinearLayout>
            <!-- Parte media -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lyMiddle"
                android:orientation="vertical">
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPartMiddle"
                    android:text="@string/part_middle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/rvTop"
                    android:textSize="25sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMiddle"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvPartSup"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="horizontal"
                    android:layoutDirection="ltr"
                    tools:listitem="@layout/part_of_clothes_template"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            </LinearLayout>
            <!-- Calzado -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lyDown"
                android:orientation="vertical">
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPartDown"
                    android:text="@string/part_middle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/rvTop"
                    android:textSize="25sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDown"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvPartSup"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="horizontal"
                    android:layoutDirection="ltr"
                    tools:listitem="@layout/part_of_clothes_template"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>