<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="730dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cvWeather"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lySpinners"
            >

            <ImageView
                android:id="@+id/ivIconTemp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:layout_margin="20dp"
                android:layout_gravity="center|right"
                android:src="@android:drawable/btn_star_big_on"/>

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="22sp"
                android:layout_margin="20dp"
                android:layout_gravity="top|left"/>

            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_margin="20dp"
                android:text="@string/temperature"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/lySpinners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/lyOutfit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvWeather">

            <Spinner
                android:id="@+id/spinnerStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:padding="5dp"
                android:popupElevation="5dp" />

            <Spinner
                android:id="@+id/spinnerColors"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:padding="5dp"
                android:popupElevation="5dp" />
        </LinearLayout>




            <LinearLayout
                android:id="@+id/lyOutfit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/lySpinners"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="5dp">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/ivSet"
                            android:layout_width="match_parent"
                            android:layout_height="350dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/conjunto"
                            tools:backgraund="@color/black"
                            android:layout_gravity="top|center"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:orientation="vertical"
                            android:background="@color/green_app">
                            <TextView
                                android:id="@+id/tvTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="Tu outfit de hoy"
                                android:textSize="22sp"
                                android:layout_margin="15dp"
                                android:layout_gravity="left"/>

                            <Button
                                android:layout_width="125dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|right"
                                android:layout_marginTop="30dp"
                                android:layout_marginRight="15dp"
                                android:layout_marginBottom="15dp"
                                android:background="@drawable/btnrounded"
                                android:text="@string/seeMore" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>